fixed animation jump on login

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -14,6 +14,9 @@ body {
     transform: translateY(50px);
     opacity: 0;
 }
+#page-container.til-open-end {
+    transition: opacity 0.4s ease, transform 0.4s ease;
+}
 
 #page-container {
     position: relative;
@@ -27,20 +30,18 @@ body {
 #page-container.is-login {
     width: 500px;
     height: 92vh;
-    max-height: 675px;
     border-radius: 25px;
 }
 
 #page-container.is-signup {
     width: 500px;
     height: 92vh;
-    max-height: 675px;
     border-radius: 25px;
 }
 
 #page-container.is-dashboard {
     width: calc(100% - 15px);
-    height: calc(100% - 15px);
+    height: calc(100% - 15px) !important;
     border-radius: 30px;
 }
 
